brat/test/golden/error/pass_empty.brat
f(Nat) -> Nat
f = { (x => x), .. }
